--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-streamlit
-pandas
-numpy
-scikit-learn
-plotly
-pilloweasyocr
-torch
-torchvision
-opencv-python-headless
-pillow
-pytesseract
-transformers
+streamlit==1.36.0
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.5.0
+plotly==5.22.0
+pillow==10.3.0
+easyocr==1.7.1
+torch==2.2.2
+torchvision==0.17.2
+opencv-python-headless==4.9.0.80
+pytesseract==0.3.10
+transformers==4.41.2
